@@ -74,6 +74,7 @@ Chronological list of authors
   - Eugen Hruska
   - Bart Bruininks
   - Fiona Naughton
+  - Robert Delgado
 
 External code
 -------------
